--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <h2 class="mt-0 mb-2">Level <span class="levels"></span></h2>
             <form class="mt-4 form-game align-items-center d-flex mb-5" action="">
                 <label class="number-level mr-3" for="">1 va 100 orasidagi sonni kiriting</label>
-                <input class="form-input disabled" type="number" step="any">
+                <input class="form-input" type="number" step="any">
                 <button class="ml-4 btn btn-primary">Tekshirish</button>
             </form>
             <div class="d-flex flex-column align-items-center">
                 <div class="start-wrapper d-none flex-column align-items-center justify-content-center mt-5">
-                    <h3 class="m-0 mb-3">Urinishlar soni <span class="decrement"></span>ta</h3>
+                    <h3 class="m-0 mb-3">Urinishlar soni: <span class="decrement"></span></h3>
                     <p class="h3 mb-0">Siz kiritgan son: <span class="game-span text-primary"></span></p>
                     <output class="game-result h1 m-0 py-4 font-weight-bold"></output>
                 </div>
