--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2 class="mt-0 mb-2">Level <span class="levels"></span></h2>
             <form class="mt-4 form-game align-items-center d-flex mb-5" action="">
                 <label class="number-level mr-3" for="">1 va 100 orasidagi sonni kiriting</label>
-                <input class="form-input" type="number" step="any">
+                <input class="form-input" type="number" step="any" disabled>
                 <button class="ml-4 btn btn-primary">Tekshirish</button>
             </form>
             <div class="d-flex flex-column align-items-center">
